# qrcodegen

./: .eslintignore  .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  jest.config.ts  package.json  tsconfig.json  tsgo.config.js
docs/api/: index.md  qrcodegen.api.encodebinary.md  qrcodegen.api.encodetext.md  qrcodegen.api.md  qrcodegen.canvaslike.getcontext.md  qrcodegen.canvaslike.height.md  qrcodegen.canvaslike.md  qrcodegen.canvaslike.width.md  qrcodegen.canvasrenderingcontext2dlike.fillrect.md  qrcodegen.canvasrenderingcontext2dlike.fillstyle.md  qrcodegen.canvasrenderingcontext2dlike.md  qrcodegen.canvasrenderingcontext2dlike.restore.md  qrcodegen.canvasrenderingcontext2dlike.save.md  qrcodegen.drawcanvas.md  qrcodegen.drawoptions.backgroundcolor.md  qrcodegen.drawoptions.foregroundcolor.md  qrcodegen.drawoptions.md  qrcodegen.drawoptions.padding.md  qrcodegen.ecc.md  qrcodegen.init.md  qrcodegen.matrix.md  qrcodegen.md
script/: build.js
src/: base64.ts  export.h  index.ts  init.ts  qrcodegen.h  scope.ts
test/: index.html  index.js
